Delt with scrollbar issue.

--- a/onestoppopshop/src/App.css
+++ b/onestoppopshop/src/App.css
@@ -1,3 +1,3 @@
-html, body {
-    overflow-y: hidden;
+html {
+    overflow: hidden;
 }
