--- a/onestoppopshop/src/pages/checkout/checkout.module.css
+++ b/onestoppopshop/src/pages/checkout/checkout.module.css
@@ -3,6 +3,7 @@
 .checkoutPage {
     display: grid;
     grid-template-columns: 6fr 4fr;
+    overflow-y: scroll;
 }
 
 .orderPanel {
