--- a/onestoppopshop/src/pages/checkout/checkoutCart.module.css
+++ b/onestoppopshop/src/pages/checkout/checkoutCart.module.css
@@ -2,7 +2,7 @@
 
 .checkoutCart {
     width: 100%;
-    height: 41.5rem;
+    height: 84vh;
     padding-top: 1rem;
     background-color: #FCC68F;
     display:flex;
